--- a/css/main.css
+++ b/css/main.css
@@ -35,10 +35,23 @@
 	opacity: 0;
 }
 
-.input-group {
+.ticker-input {
 	position: absolute !important;
 	left: 0px;
 	right: 0px;
 	transition: all, 0.25s, ease-in-out;
 	opacity: 0;
 }
+/*Foundation Bug fix*/
+.prefix-round.row.collapse .prefix {
+  border-radius: 0;
+  -webkit-border-bottom-left-radius: 1000px;
+  -webkit-border-top-left-radius: 1000px;
+  border-bottom-left-radius: 1000px;
+  border-top-left-radius: 1000px; }
+.postfix-round.row.collapse .postfix {
+  border-radius: 0;
+  -webkit-border-bottom-right-radius: 1000px;
+  -webkit-border-top-right-radius: 1000px;
+  border-bottom-right-radius: 1000px;
+  border-top-right-radius: 1000px; }
